--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.
-  I'm fueled by chicken nuggets</p>
+  I'm fueled by chicken nuggets
+  <img src="http://www.mygifs.com/CoverImage.gif" alt="A Great HTML Resource"></p>
 </body>
 </html>
